[metadata]
name = tremendous-client
version = 0.1.0
description = Python Client Library for the Tremendous API
long_description = Python Client Library for the Tremendous API
long_description_content_type = text/plain
url = https://github.com/FreshNar/Tremendous-Python
author = Kyle Kopelke
author_email = kopelke.kyle@gmail.com
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
keywords = tremendous api client library
project_urls =
    Source = https://github.com/FreshNar/Tremendous-Python

[options]
packages = find:
install_requires =
    requests>=2.28
    pydantic>=2
python_requires = >=3.8
include_package_data = True

[options.packages.find]
exclude =
    env*
    tests*


